Add dummy simulation